# campunix-admin-api

./: .env  .gitignore  README.md  alembic.ini  alembic_helper.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 003e724152eb_create_course_type_enum_type.py  19f56eaab11e_create_book_table.py  2024_10_29_0020-e5940d9f8529_create_user_role_enum_type.py  2024_10_29_0021-15168c165e36_create_teacher_status_enum_type.py  2024_10_29_0021-955f70d7f2a6_create_course_type_enum_type.py  2024_10_29_0021-c92c40703264_create_room_type_enum_type.py  2024_10_29_0022-1826137946ce_create_staff_status_enum_type.py  2024_10_29_0022-ed696a6b1f2c_create_teacher_designation_enum_type.py  2024_10_29_0022-f17cb9d56eed_create_staff_designation_enum_type.py  2024_10_29_0028-53beddec73d9_create_users_table.py  2024_10_29_0033-751e4bb98f97_create_organizations_table.py  2024_10_29_0034-10021c774dae_create_user_organizations_table.py  2024_10_29_0035-020b0bae7bf4_create_admin_groups_table.py  2024_10_29_0040-a1c8731ba3f4_create_departments_table.py  2024_10_29_0041-98975b75b5ba_create_rooms_table.py  2024_10_29_0043-bba5a332bf7f_create_courses_table.py  2024_10_29_0044-325dafef86a1_create_teachers_table.py  2024_10_29_0046-18e077f85792_create_teacher_courses_table.py  2024_10_29_0047-148ac474beeb_create_staff_table.py  2024_10_29_0050-2c5d2ebfea77_create_students_table.py  2024_10_29_0053-493a14ad9264_create_student_courses_table.py  (+27 more)
db_seed/: db_seeder.py  seed.py  seeder.py
requirements/: base.txt
src/: database.py  exceptions.py  main.py  pagination.py
templates/: index.html
(+147 files in other folders)
