[tool.poetry]
package-mode = false
name = "campunix-admin-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.3"}
dependency-injector = "^4.42.0"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.22"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.0"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
python-multipart = "^0.0.12"
psycopg2 = "^2.9.10"
bcrypt = "^4.2.0"
httpx = "^0.27.2"
asyncpg = "^0.30.0"
sqlalchemy-searchable = "^2.1.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
